[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "S5"
authors = [{name = "Owen Foo", email = "owentmfoo@gmail.com"}]
readme = "README.md"
requires-python=">=3.6"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]
dynamic = ["version", "description",]

dependencies = [
    "pandas >= 1.5.0",
    "pvlib",
    "pytz",
    "matplotlib >= 3.5.0",
    "tqdm",
    "numpy >= 1.20.3, < 2",
    "pytest >= 7.1.1",
    "setuptools >= 58.0.4",
]



[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
grib = [
    "xarray",
    "cfgrib",
    "eccodes",
]
aws = [
    "boto3 >= 1.26",
]
forecast = [
    "solcast ~= 1.0.2",
]
docs = [
    "sphinx==7.1.2",
    "pydata-sphinx-theme==0.14"
]

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra"
]

testpaths = "S5"

markers = [
    "smoke: subset of tests",
    "exception: check for expected exceptions"
]
filterwarnings = [
    "ignore:distutils Version classes are deprecated.*:DeprecationWarning:pandas.*",
    "ignore:In a future version.*:FutureWarning",
    "ignore:distutils Version classes are deprecated.*:DeprecationWarning:numpy.*",
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]

[tool.coverage.run]
omit = [
    "S5/tests/*",
    "S5/visualisation/*",
]

